--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "react-scripts": "3.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -27,5 +27,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "customize-cra": "^0.7.0",
+    "less": "^3.10.3",
+    "react-app-rewired": "^2.1.3",
+    "styled-jsx": "^3.2.2",
+    "styled-jsx-plugin-less": "^0.0.1-alpha.2"
   }
 }
